03 Okt 2002 PER fixes
01 Okt 2002 Fix for SSK/ISK/RRB - Juergen Dobrinski
19 Sep 2002 Fix cckd thrash for large fragmentations - Greg Smith
19 Sep 2002 Fix console.c to wait for initdone to listen - Greg Smith
30 Aug 2002 Fix MVCL to update regs prior to possible program check - Greg Smith
26 Aug 2002 Added "noprompt" option to turn off input prompting for 1052/3215
            consoles - Jay Maynard
25 Aug 2002 Fix cckd free space chain corruption when freeing space
            for a `type 1' null track - Greg Smith & Volker Bandke
08 Aug 2002 Increased cckd shutdown serialization - Greg Smith
08 Aug 2002 Add 'Send" button in syslog cgi - Adam Thornton by Jan Jaeger
08 Aug 2002 AEA invalidation performance enhancement - Gabor Hofi by Greg Smith
03 Aug 2002 Fix dasdload to ignore comments in CBT XMIT files - Roger Bowler
03 Aug 2002 Change automagic to make NLS support work - Volker Bandke
30 Jul 2002 Compressed dasd tweaks - Greg Smith
26 Jul 2002 Compressed dasd enhanced free pending processing - Greg Smith
22 Jul 2002 Performance tweaks - Gabor Hofi & Greg Smith
22 Jul 2002 cckd options `nofsync' and `fsyncwa' - Greg Smith
21 Jul 2002 Update ieee-w32.h to compile under current Cygwin - Greg Smith
19 Jul 2002 Fix to cpu utilization percentage - Greg Smith
17 Jul 2002 New utility dasdcopy.c; replaces ckd2cckd and cckd2ckd and
            adds fba2cfba and cfba2fba function - Greg Smith
16 Jul 2002 New 'hmccmds.c' source module #included by 'panel.c'. - Fish
14 Jul 2002 UNTABBED all .c/.h source files (NO EMBEDDED TABS, please!) - Fish
14 Jul 2002 ** MAJOR CLEANUP ** Added -W compile option to see ALL warnings and
            corrected most signed/unisgned and unreferenced warnings; only
            'ckddasd', 'cckddasd' and 'cckdutil' remain to be cleaned up - Fish
13 Jul 2002 Fix dasdutil.c to correctly detecte write error in
            created_ckd_file - Volker Bandke
11 Jul 2002 File integrity fixes for compressed dasd - Greg Smith